--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "REST server test program for Kenzan",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "mocha",
     "start": "nodemon server.js"
   },
   "repository": {
@@ -23,11 +23,15 @@
   },
   "homepage": "https://github.com/djlogan2/kenzan_node#readme",
   "devDependencies": {
+    "mocha": "^4.0.1",
+    "node-rest-client": "^3.1.0",
     "nodemon": "^1.12.1"
   },
   "dependencies": {
+    "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "mongoose": "^4.12.1"
+    "mongoose": "^4.12.1",
+    "typed-enum": "^0.1.1"
   }
 }
