--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
     "mongoose": "^4.12.1",
-    "typed-enum": "^0.1.1"
+    "typed-enum": "^0.1.1",
+    "underscore": "^1.8.3"
   }
 }
