Converted authorization to proper router middleware
It makes the authorization far more secure, since it's called by default on each API call, so now a basic /login will now be required by default if anyone adds any more APIs.

The next step is to figure out how to specify required roles in the router .get and .post calls rather than hard code them in the middleware method.

--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
+    "express-authentication-bearer": "^0.2.1",
     "mongoose": "^4.12.1",
     "typed-enum": "^0.1.1",
     "underscore": "^1.8.3"
