--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "bcrypt": "^1.0.3",
     "body-parser": "^1.18.2",
     "express": "^4.16.2",
-    "express-authentication-bearer": "^0.2.1",
+    "express-handlebars": "^3.0.0",
+    "express-session": "^1.15.6",
+    "handlebars-form-helpers": "^0.1.3",
     "mongoose": "^4.12.1",
-    "typed-enum": "^0.1.1",
+    "selenium-webdriver": "^3.6.0",
     "underscore": "^1.8.3"
   }
 }
