--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   "homepage": "https://github.com/djlogan2/kenzan_node#readme",
   "devDependencies": {
     "mocha": "^4.0.1",
+    "selenium-webdriver": "^3.6.0",
     "node-rest-client": "^3.1.0",
-    "nodemon": "^1.12.1"
+    "nodemon": "^1.12.1",
+    "zombie": "^5.0.7"
   },
   "dependencies": {
     "bcrypt": "^1.0.3",
@@ -34,8 +36,10 @@
     "express-handlebars": "^3.0.0",
     "express-session": "^1.15.6",
     "handlebars-form-helpers": "^0.1.3",
-    "mongoose": "^4.12.1",
-    "selenium-webdriver": "^3.6.0",
+    "js-joda": "^1.6.2",
+    "mongoose": "^4.13.3",
+    "secure-random": "^1.1.1",
+    "serve-favicon": "^2.4.5",
     "underscore": "^1.8.3"
   }
 }
